--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
             <div class="div z">
                 <img src="images/mac.jpg" alt="">
                 <h5>Apple items</h3>
-                <p>Apple items are known for their cutting-edge technology and reliability.</p>
+                <p>Apple items are known for their cutting-edge technology and reliability are known for their cutting-edge technology and reliability.</p>
             </div>
             <div class="div">
                 <img src="images/books.jpg" alt="">
                 <h5>Books</h5>
-                <p>LBooks are my constant companions, enriching my travel experiences wherever I go.</p>
+                <p>LBooks are my constant companions, enriching my travel experiences wherever I go  enriching my travel experiences wherever I go.</p>
             </div>
             <div class="div">
                 <img src="images/jwellery.jpg" alt="">
                 <h5>Jewelry</h5>
-                <p>I love finding unique jewelry pieces that capture the essence of each destination.</p>
+                <p>I love finding unique jewelry pieces that capture  the essence of each destination the essence of each destination.</p>
             </div>
         </div>
     </div>
@@ -59,19 +59,19 @@
         </div>
         <div class="image second">
             <div class="div z">
-                <img src="images/mac.jpg" alt="">
+                <img src="images/pizza.jpg" alt="">
                 <h5>Pizza</h3>
-                <p>Pizza, with its endless variety of flavors find and enjoy in almost every corner of the world.</p>
+                <p>Pizza, with its endless variety of flavors find and enjoy in almost every corner of the world of the world.</p>
             </div>
             <div class="div">
-                <img src="images/books.jpg" alt="">
+                <img src="images/curry.jpg" alt="">
                 <h5>Curry</h5>
-                <p>Wherever I travel, nothing delights me more than discovering the flavors of curry.</p>
+                <p>Wherever I travel, nothing delights me more than discovering the flavors of curry discovering the flavors of curry.</p>
             </div>
             <div class="div">
-                <img src="images/jwellery.jpg" alt="">
+                <img src="images/CROISSANTS.jpg" alt="">
                 <h5>Croissants</h5>
-                <p>Savor the buttery perfection of freshly baked delightful start to any adventure</p>
+                <p>Savor the buttery perfection of freshly baked delightful start to any adventure delightful start to any adventure.</p>
             </div>
         </div>
     </div>
